refactor: divide drawing logic into multiple dedicated functions